# ta-claro

./: .gitignore  AGENTS.html  AGENTS.md  final_plan.md  final_plan_debit_cards.txt  hello.py  plan_front.md  pyproject.toml  requirements.txt
data/: api_bank_credit_card_operations.py  api_uf.py  bank_credit_card_ops.py  bank_debit_card_ops.py  historical_api_cmf_cards.py  historical_api_uf.py
data/loaders/: bank_credit_card_ops_loader.py  bank_credit_card_ops_sync_state_loader.py  bank_debit_card_ops_loader.py  cmf_purchase_volume_loader.py  cmf_sync_state_loader.py  cmf_transaction_count_loader.py  uf_loader.py
data/models/: bank_credit_card_operations.py  bank_debit_card_operations.py  cmf_cards.py  uf.py
data/sources/: bank_credit_card_operations.py  (+3 more)
db/: 001_cmf_foundation.sql  002_uf_source_driven_sync.sql  003_bank_credit_card_ops_views.sql  003_cmf_demo_views.sql  004_cmf_cards_cleanup.sql  004_cmf_ops_shared_registry.sql  004_drop_obsolete_credit_card_views.sql  005_cmf_card_purchase_name_fix.sql  005_drop_obsolete_cmf_dataset_rows.sql  005_drop_obsolete_credit_card_tables.sql  006_split_cmf_card_endpoint_metadata.sql  007_fix_card_ops_start_dates.sql  008_credit_card_card_counts.sql  009_credit_card_metrics_rollback.sql  010_operations_rate_add_supplementary_fields.sql  011_rename_operations_rate_to_total_activation_rate.sql  012_operations_rate_view_add_cards_with_operations_fields.sql  013_non_banking_credit_card_endpoints.sql  014_debit_card_metrics.sql
front/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
shared/: time.py
(+64 files in other folders)
