[project]
name = "02-project-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.9",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "supabase>=2.28.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
